# discord-guild-manager

./: .env.example  .gitignore  .installed  CONTRIBUTING.md  Dockerfile  EXAMPLE_DATA.md  LICENSE  Makefile  QUICK_START.md  README.md  discord_api_handler.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  start_mac_linux.sh  start_windows.bat
data/: .gitkeep  account_indexes.txt  ds_tokens.txt  guilds_leave.txt  proxies.txt  user_agents.txt
output/: .gitkeep
utils/: __init__.py  browser.py  logger.py
